--- a/foodie-app/src/Component/Navbar/Navbar.module.scss
+++ b/foodie-app/src/Component/Navbar/Navbar.module.scss
@@ -1,8 +1,8 @@
 .main_container {
   width: 100%;
-  height: 60px;
+  height: 55px;
   display: flex;
-  background-color: lightcoral;
+  background-color: #ff5e5b;
   align-items: center;
   justify-content: space-between;
 }
@@ -18,6 +18,9 @@
   justify-content: space-around;
   cursor: pointer;
 }
+
 li :hover {
   color: whitesmoke;
+  transform: translateY(5px);
+  transition: transform 0.4s linear !important;
 }
