--- a/foodie-app/src/Pages/Homepage/Homepage.module.scss
+++ b/foodie-app/src/Pages/Homepage/Homepage.module.scss
@@ -1,4 +1,11 @@
 .maincontainer {
   width: 100%;
   height: 100%;
+  background-size: cover;
+}
+.advertisement {
+  width: 100%;
+  height: auto;
+  text-align: center;
+  margin-top: 50px;
 }
