--- a/foodie-app/src/Component/Navbar/Navbar.module.scss
+++ b/foodie-app/src/Component/Navbar/Navbar.module.scss
@@ -1,15 +1,34 @@
 .main_container {
   width: 100%;
-  height: 55px;
+  height: 60px;
   display: flex;
   background-color: #ff5e5b;
   align-items: center;
   justify-content: space-between;
+  position: fixed;
+  top: 0;
 }
 .logo {
   cursor: pointer;
-  width: 74%;
+  width: 70px;
+  height: 60px;
+  margin: 0px 0px;
+  color: black;
+  margin: 0px 5px;
+  border-radius: 5px;
+}
+
+.logo1 {
+  width: 75%;
   margin: 0px 10px;
+  color: black;
+}
+
+.tagline {
+  color: whitesmoke;
+  font-style: italic;
+  font-size: 12px;
+  margin: 3px 12px;
 }
 .Navigation_list {
   display: flex;
@@ -23,4 +42,13 @@ li :hover {
   color: whitesmoke;
   transform: translateY(5px);
   transition: transform 0.4s linear !important;
+}
+.handleLogo {
+  width: 75%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.trans {
+  transform: rotate(180deg);
 }
