--- a/foodie-app/src/Component/Card/style.css
+++ b/foodie-app/src/Component/Card/style.css
@@ -2,6 +2,7 @@
   display: flex;
   background-color: rgb(243, 203, 72);
   /* margin-top: 15px; */
+  position: relative;
 }
 
 .card {
@@ -10,4 +11,11 @@
   width: 250px;
   /* border-radius: 50%; */
   margin: 0 0px;
+  position: absolute;
+}
+.card:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  transition: all 0.5s ease-in-out;
+  box-shadow: -6px -6px 15px -1px rgba(0, 0, 0, 0.75);
 }
