--- a/foodie-app/src/Component/Navbar/Navbar.module.css
+++ b/foodie-app/src/Component/Navbar/Navbar.module.css
@@ -1,13 +1,20 @@
 .main_container {
   width: 100%;
   height: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   background-color: #ff5e5b;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   position: fixed;
   top: 0;
 }
+
 .logo {
   cursor: pointer;
   width: 70px;
@@ -30,30 +37,45 @@
   font-size: 12px;
   margin: 3px 12px;
 }
+
 .Navigation_list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   list-style: none;
   width: 26%;
-  justify-content: space-around;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   cursor: pointer;
 }
 
 li :hover {
   color: whitesmoke;
+  -webkit-transition: all 0.3s linear !important;
   transition: all 0.3s linear !important;
 }
+
 .handleLogo {
   width: 75%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
 .trans {
-  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
 }
+
 .activelink {
   background-color: rgba(255, 255, 255, 0.3);
   color: #1b1464 !important;
   border-radius: 5px;
   padding: 4px;
 }
+/*# sourceMappingURL=Navbar.module.css.map */
