--- a/foodie-app/src/Component/UserSearchInputBar/UserSearchInputBar.module.scss
+++ b/foodie-app/src/Component/UserSearchInputBar/UserSearchInputBar.module.scss
@@ -27,12 +27,15 @@ form.UserResponse button {
   border-left: none;
   cursor: pointer;
   border-radius: 2px;
+  margin-top: 9px;
+  color: black;
 }
 
 form.UserResponse button:hover {
   background: #0b7dda;
   transform: rotate(180deg);
   transition: all 0.4s linear;
+  color: whitesmoke;
 }
 
 form.UserResponse::after {
