Added cart drop down and put state in redux

--- a/foodie-app/src/Component/Navbar/Navbar.module.scss
+++ b/foodie-app/src/Component/Navbar/Navbar.module.scss
@@ -72,9 +72,10 @@ li :hover {
 }
 .item_count {
   position: absolute;
-  font-weight: 10px;
+  font-weight: 8px;
   font-weight: bold;
   bottom: 0;
   margin-right: 1px;
   margin-top: 15px;
+  font-size: 14px;
 }
