Added Stripe Payment ,Added Forgot Password Functionality
And Many More Stuffs.......

--- a/foodie-app/src/Pages/SignInPage/Sign_In.module.scss
+++ b/foodie-app/src/Pages/SignInPage/Sign_In.module.scss
@@ -157,3 +157,13 @@ form {
 .button2:hover {
   color: whitesmoke;
 }
+.modalButton {
+  padding: 8px;
+  margin-top: 15px;
+  cursor: pointer;
+  background-color: green;
+  color: whitesmoke;
+  &:hover {
+    color: black;
+  }
+}
