--- a/foodie-app/src/Component/CartDropDown/CartDropDown.module.scss
+++ b/foodie-app/src/Component/CartDropDown/CartDropDown.module.scss
@@ -32,3 +32,14 @@
     transform: scale(1.1);
   }
 }
+.empty_message {
+  height: 100%;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  color: rgba(0, 98, 255, 0.6);
+  font-weight: 800;
+}
