Changed the routing,added phone verification and many more stuffs

--- a/foodie-app/src/Pages/UserDetailsPage/UserDetails.module.scss
+++ b/foodie-app/src/Pages/UserDetailsPage/UserDetails.module.scss
@@ -1,22 +1,31 @@
-.StripeButton {
-  margin-bottom: 40px;
+.main_container {
+  width: 100%;
+  height: 100%;
+  margin-top: 80px;
 }
-.duplicateStripeButton {
-  margin-left: 5px;
-  padding: 7px 12px;
-  background-color: #0096c7;
-  color: black;
-  font-weight: 600;
-  opacity: 0.5;
-  font-family: Geneva, Tahoma, sans-serif;
-  border-radius: 5px;
-  border: 1px solid #023e8a;
-  cursor: pointer;
+.sub_container {
+  width: 38%;
+  margin: auto;
+  border: 2px solid gray;
 }
-.modalselect select {
+.appeal {
+  text-align: center;
+}
+form {
+  width: 100%;
+}
+form input {
   width: 80%;
-  margin-top: 8px;
-  height: 30px;
+  margin-bottom: 10px;
+}
+.phone {
+  width: 70%;
+}
+form textarea {
+  width: 80%;
+  height: 40%;
+  margin-top: 15px;
+  margin-bottom: 10px;
 }
 .modalcheckbox {
   width: 80%;
@@ -28,6 +37,7 @@
 }
 .modalcheckbox input {
   width: 10%;
+  cursor: pointer;
 }
 .modaldeclaration {
   display: flex;
@@ -36,7 +46,11 @@
   width: 90%;
   font-size: 13px;
 }
-
+form select {
+  width: 80%;
+  height: 34px;
+  margin-top: 14px;
+}
 .modalButton {
   padding: 8px;
   margin-top: 15px;
@@ -44,20 +58,16 @@
   background-color: green;
   color: whitesmoke;
   border-radius: 5px;
+  margin-bottom: 20px;
   &:hover {
     color: black;
   }
 }
-.modalTextArea {
-  margin-top: 8px;
-  font-size: 14px;
-}
-.phone {
-  width: 70%;
-}
+
 .verifyPhone {
-  padding: 5px;
+  padding: 6px;
+  margin-left: 5px;
+  cursor: pointer;
   background-color: green;
   color: whitesmoke;
-  cursor: pointer;
 }
