--- a/foodie-app/src/Pages/PageNotFound/PageNotFound.module.scss
+++ b/foodie-app/src/Pages/PageNotFound/PageNotFound.module.scss
@@ -15,7 +15,8 @@
 .pnf h1 {
   font-size: 13rem;
   -webkit-background-clip: text;
-  color: transparent;
+  background-clip: text;
+  // color: transparent;
   background-position: center;
   background-size: 100%;
   filter: drop-shadow(0px 15px 20px rgba(0, 0, 0, 0.5));
