Integrated all parts

--- a/foodie-app/src/Component/Advertisement/Advertisement.module.scss
+++ b/foodie-app/src/Component/Advertisement/Advertisement.module.scss
@@ -1,6 +1,41 @@
 .advertisement {
   width: 100%;
-  height: auto;
+  height: 50px !important;
   text-align: center;
   margin-top: 40px;
+  color: black;
+  font-weight: 500;
+  --slider-transition-duration: 1700ms !important;
+}
+.advertisement div {
+  background-color: transparent;
+  font-size: 2rem;
+  z-index: 0;
+}
+
+// .aws-btn {
+
+//   --slider-height-percentage: 60%;
+//   --slider-transition-duration: 1000ms;
+//   --organic-arrow-thickness: 4px;
+//   --organic-arrow-border-radius: 0px;
+//   --organic-arrow-height: 40px;
+//   --organic-arrow-color: #d6b18f;
+//   --control-button-width: 10%;
+//   --control-button-height: 25%;
+//   --control-button-background: transparent;
+//   --control-bullet-color: #fcd0a8;
+//   --control-bullet-active-color: #d6b18f;
+//   --loader-bar-color: #851515;
+//   --loader-bar-height: 6px;
+//   }
+
+@media (max-width: 600px) {
+  .advertisement {
+    color: white;
+    height: 30px !important;
+  }
+  .advertisement div {
+    font-size: 1.2rem;
+  }
 }
