--- a/foodie-app/src/Pages/SignUp_Page/SignUp.module.scss
+++ b/foodie-app/src/Pages/SignUp_Page/SignUp.module.scss
@@ -1,15 +1,19 @@
 .main_container {
   width: 100%;
-  height: 100%;
-  margin-top: 110px;
+  height: 700px;
+  // margin-top: 110px;
+  padding-top: 80px;
+  background: linear-gradient(-168deg,white 50%, rgb(230, 230, 224) 50%);
 }
 .sub_container {
   width: 52%;
-  height: 80%;
+  height: 480px;
   margin: auto;
   display: flex;
   justify-content: space-between;
-  margin-top: 50px;
+  margin-top: 40px;
+  margin-bottom: 50px;
+  background-color: white;
 }
 .branding {
   width: 40%;
@@ -139,4 +143,82 @@ form {
 }
 .button1:hover {
   color: whitesmoke;
+}
+
+@media (max-width:990px){
+  .branding {
+   
+    display: block;
+    height: 540px;
+  }
+  .sub_container {
+    width: 80%;
+    height: 540px;
+    // margin: auto;
+    // display: flex;
+    // justify-content: space-between;
+    margin-top: 40px;
+    margin-bottom: 50px;
+    // margin-left: 90px;
+    background-color: white;
+  }
+  .signInForm {
+    width: 100%;
+    height: 540px;
+    border: 1px solid grey;
+  }
+}
+
+@media (max-width:800px){
+  .branding {
+    display: none;
+  }
+  
+  .sub_container {
+    width: 70%;
+    height: 540px;
+    // margin: auto;
+    // display: flex;
+    // justify-content: space-between;
+    margin-top: 40px;
+    margin-bottom: 50px;
+    // margin-left: 90px;
+    background-color: white;
+  }
+  .signInForm {
+    width: 100%;
+    height: 540px;
+    border: 1px solid grey;
+  }
+    .button1 {
+      width: 310px;
+      height: 40px;
+      cursor: pointer;
+      font-size: 15px;
+      letter-spacing: 1px;
+    }
+  
+}
+
+@media (max-width:600px){
+  .branding {
+    display: none;
+  }
+  .sub_container {
+    width: 100%;
+    height: 540px;
+    // margin: auto;
+    // display: flex;
+    // justify-content: space-between;
+    margin-top: 40px;
+    margin-bottom: 50px;
+    // margin-left: 90px;
+    background-color: white;
+  }
+  
+  .signInForm {
+    width: 100%;
+    height: 540px;
+    border: 1px solid grey;
+  }
 }
