--- a/foodie-app/src/Component/FoodCard/foodCard.scss
+++ b/foodie-app/src/Component/FoodCard/foodCard.scss
@@ -1,11 +1,85 @@
+// .foodcard {
+//   height: 350px;
+//   width: 28%;
+//   border-radius: 5px;
+//   padding: 0px 2px;
+//   border: 2px solid wheat;
+//   text-align: center;
+//   margin: 10px 0;
+// }
+// .foodcard:hover {
+//   transition: 0.3s;
+//   box-shadow: 5px 6px 8px 5px rgba(0, 0, 0, 0.3);
+//   cursor: pointer;
+// }
+
+// .container1 .divshow {
+//   display: block;
+// }
+
+// .container1 .nodivshow {
+//   display: none;
+// }
+
+// a {
+//   text-decoration: none;
+// }
+// .rating {
+//   width: 50px;
+//   display: flex;
+//   justify-content: space-evenly;
+//   align-items: center;
+// }
+// .restaurantName {
+//   margin-top: 15px;
+// }
+// .image {
+//   height: 50%;
+//   width: 90%;
+//   border-radius: 5px 5px 0 0;
+//   margin: 10px 10px 0px 10px;
+//   background-position: center;
+//   background-size: cover;
+// }
+
+// .container1 {
+//   padding: 0px 16px;
+// }
+// .container1 div {
+//   margin-bottom: 5px;
+//   display: flex;
+//   flex-direction: row;
+//   flex-wrap: wrap;
+//   justify-content: space-evenly;
+// }
+// .container1 span {
+//   font-size: 12px;
+// }
+// .container1 h3 {
+//   font-size: 15px;
+//   padding-bottom: 1px;
+//   color: black;
+// }
+// .container1 h4 {
+//   font-size: 12px;
+//   padding-bottom: 1px;
+// }
+
+// .container1 p {
+//   font-size: 12px;
+//   padding: 2px 0;
+//   text-align: center;
+//   color: black;
+// }
+
 .foodcard {
-  height: 350px;
+  height: 25rem;
   width: 28%;
-  border-radius: 5px;
-  padding: 0px 2px;
-  border: 2px solid wheat;
+  border-radius: 0.8rem;
+  padding: 0px 0px;
+  border: 0.1rem solid wheat;
   text-align: center;
-  margin: 10px 0;
+  margin: 0.7rem 0;
 }
 .foodcard:hover {
   transition: 0.3s;
@@ -25,49 +99,180 @@ a {
   text-decoration: none;
 }
 .rating {
-  width: 50px;
+  // width: 50px;
+  width: fit-content;
   display: flex;
-  justify-content: space-evenly;
+  // justify-content: space-evenly;
+  padding: 4px 6px;
   align-items: center;
 }
 .restaurantName {
-  margin-top: 15px;
+  margin-top: 1.2rem;
 }
 .image {
   height: 50%;
   width: 90%;
-  border-radius: 5px 5px 0 0;
-  margin: 10px 10px 0px 10px;
+  border-radius: 0.2rem 0.2rem 0 0;
+  margin: 1rem 1rem 0rem 1rem;
   background-position: center;
   background-size: cover;
 }
 
 .container1 {
-  padding: 0px 16px;
+  padding: 0rem 1.5rem;
 }
 .container1 div {
-  margin-bottom: 5px;
+  margin-bottom: 0.3rem;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
 .container1 span {
-  font-size: 12px;
+  font-size: 0.7rem;
+}
+.address {
+  letter-spacing: 1px;
+  font-size: 12px !important;
+  text-align: justify;
 }
 .container1 h3 {
-  font-size: 15px;
-  padding-bottom: 1px;
+  font-size: 18px;
+  padding-bottom: 0.1rem;
   color: black;
+  font-weight: 500;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 .container1 h4 {
-  font-size: 12px;
-  padding-bottom: 1px;
+  font-size: 1rem;
+  padding-bottom: 0.1rem;
+  padding-left: 0.6rem;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .container1 p {
-  font-size: 12px;
-  padding: 2px 0;
+  font-size: 1rem;
+  padding: 0.1rem 0;
   text-align: center;
   color: black;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+
+@media only screen and (max-width: 990px) {
+  .foodcard {
+    height: 420px;
+    width: 30%;
+    border-radius: 3px;
+    padding: 5px 0px;
+    padding-left: 5px;
+    text-align: center;
+    flex-direction: row;
+  }
+
+  .foodcard:hover {
+    transition: 0.3s;
+    box-shadow: 5px 6px 8px 5px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+  }
+  .container1 span {
+    font-size: 0.8rem;
+  }
+  .container1 h3 {
+    font-size: 1rem;
+    padding-bottom: 0rem;
+    color: black;
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  }
+  .container1 h4 {
+    font-size: 1.5rem;
+    padding-bottom: 0rem;
+    padding-left: 0.6rem;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .container1 p {
+    font-size: 1rem;
+    padding: 0.1rem 0;
+    text-align: center;
+    color: black;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+      "Lucida Sans", Arial, sans-serif;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .foodcard {
+    height: 350px;
+    width: 45%;
+    border-radius: 3px;
+    padding: 5px 0px;
+    padding-left: 5px;
+    text-align: center;
+    flex-direction: row;
+  }
+
+  .foodcard:hover {
+    transition: 0.3s;
+    box-shadow: 5px 6px 8px 5px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+  }
+
+  // img {
+  //   height:70px;
+  //   width:60%;
+  //   padding-left: 15px;
+  //   padding-top: 15px;
+  //   }
+  //   .container1 span{
+  //     font-size: 6px;
+  //     padding-left: 4px;
+  //     }
+  //     .container1 h3{
+  //     font-size: 14px;
+  //     padding-bottom:1px;
+  //     padding-left: 4px;
+  //     color:black;
+  //     font-weight: 30;
+  //     // font-family: fantasy;
+  //     }
+  //     .container1 h4{
+  //     font-size: 3px;
+  //     padding-bottom:1px;
+  //     padding-left: 4px;
+  //     }
+
+  //     .container1 p{
+  //     font-size: 6px;
+  //     padding:2px 0;
+  //     text-align: center;
+  //     color:black;
+  //     background-color: green($color: #000000);
+  //  }
+
+  //  .rating{
+  //   background-color: rgb(72, 196, 121);
+  //   color: white;
+  //   padding: 4px 6px ;
+  //   text-align: center;
+  //   width: fit-content;
+  // }
+}
+
+@media only screen and (max-width: 600px) {
+  .foodcard {
+    height: 400px;
+    width: 90%;
+    border-radius: 3px;
+    padding: 5px 0px;
+    padding-left: 5px;
+    text-align: center;
+    flex-direction: row;
+  }
+
+  .foodcard:hover {
+    transition: 0.3s;
+    box-shadow: 5px 6px 8px 5px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+  }
 }
