--- a/foodie-app/src/Component/Navbar/Navbar.module.scss
+++ b/foodie-app/src/Component/Navbar/Navbar.module.scss
@@ -7,6 +7,7 @@
   justify-content: space-between;
   position: fixed;
   top: 0;
+  z-index: 1;
 }
 
 .logo {
@@ -23,12 +24,13 @@
   width: 75%;
   margin: 0px 10px;
   color: black;
+  font-size: calc(14px + 1vw);
 }
 
 .tagline {
   color: whitesmoke;
   font-style: italic;
-  font-size: 12px;
+  font-size: 13px;
   margin: 3px 12px;
 }
 .Navigation_list {
@@ -38,6 +40,9 @@
   justify-content: space-around;
   cursor: pointer;
   margin-top: 16px;
+  li {
+    font-size: calc(11px + 0.5vw);
+  }
 }
 
 li :hover {
@@ -90,4 +95,23 @@ li :hover {
   margin-top: 17px;
   font-size: 14px;
   color: green;
+}
+@media only screen and (max-width: 786px) {
+  .Navigation_list {
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+  }
+  .activelink {
+    background-color: rgba(255, 255, 255, 0.3);
+    color: #1b1464 !important;
+    border-radius: 5px;
+    padding: 0px !important;
+  }
+  .main_container {
+    height: 70px;
+  }
+  .tagline {
+    display: none;
+  }
 }
