--- a/foodie-app/src/Pages/UserDetailsPage/UserDetails.module.scss
+++ b/foodie-app/src/Pages/UserDetailsPage/UserDetails.module.scss
@@ -1,8 +1,12 @@
 .main_container {
   width: 100%;
-  height: 100%;
-  margin-top: 80px;
+  height: 100vh;
+
+  margin-top: 65px;
+  position: fixed;
+  background: linear-gradient(173deg, white 50%, #eeeee9 50%);
 }
+
 .sub_container {
   width: 38%;
   margin: auto;
@@ -16,10 +20,11 @@ form {
 }
 form input {
   width: 80%;
-  margin-bottom: 10px;
+  margin-bottom: 6px;
 }
 .phone {
-  width: 70%;
+  width: 69%;
+  margin-left: 10px;
 }
 form textarea {
   width: 80%;
